Alignment Fix

--- a/ckanext/ngds/ngdsui/public/css/main.less
+++ b/ckanext/ngds/ngdsui/public/css/main.less
@@ -917,6 +917,10 @@ div.postface {
 				margin-bottom:5px;
 			}
 
+			.description-wrapper {
+				margin-left:10px;
+				text-indent:-10px;
+			}
 
 			.type, .published {
 				display:inline;
